# open-source-aviation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-metadata.yaml
src/open_source_aviation/: __init__.py  data.py
