[project]
name = "open-source-aviation"
version = "0.1.0"
description = ""
authors = [{ name = "Luciano Scarpulla", email = "scarpulla53@gmail.com" }]
dependencies = [
    "pandas>=2.2.2",
    "requests>=2.31.0",
    "gitpython>=3.1.43",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"


[tool.rye]
managed = true
virtual = true
dev-dependencies = ["ipython>=8.24.0", "isort>=5.13.2"]
